--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -6,6 +6,6 @@ body,
 .app {
   height: 100%;
   width: 100%;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
   font-family: "Rubik", sans-serif;
 }
